feat: member projection